--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "node-cron": "^3.0.2",
         "object-assign-deep": "^0.4.0",
         "rfxcom": "^2.6.0",
-        "winston": "^3.11.0"
+        "winston": "^3.11.0",
+        "@rfxcom2mqtt/frontend": "0.1.2"
     },
     "scripts": {
         "start": "ts-node ./src/index.ts",
