--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "resolveJsonModule": true,
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "outDir": "server",
-
+    "outDir": "dist",
+    "baseUrl": ".",
+    "allowJs": true,
+    "rootDir": "src",
+    "inlineSourceMap": true,
+    "experimentalDecorators": true,
     // TODO: Turn this on and fix all the errors
     "strict": true
   },
