expose logs on websocket

--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
         "node": "^18 || ^20 || ^21"
     },
     "dependencies": {
-        "git-last-commit": "^1.0.1",
-        "rimraf": "^5.0.5",
-        "semver": "^7.5.4",
-        "source-map-support": "^0.5.21",
-        "@rfxcom2mqtt/frontend": "0.1.7-2",
+        "@rfxcom2mqtt/frontend": "0.1.7-6",
         "@types/express": "^4.17.21",
         "connect-gzip-static": "^3.0.1",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
+        "express-ws": "^5.0.2",
         "finalhandler": "^1.2.0",
+        "git-last-commit": "^1.0.1",
         "http-status-codes": "^2.3.0",
         "mqtt": "^4.3.7",
         "node-config-yaml": "^0.1.4",
         "node-cron": "^3.0.2",
         "object-assign-deep": "^0.4.0",
         "rfxcom": "^2.6.0",
+        "rimraf": "^5.0.5",
+        "semver": "^7.5.4",
+        "socket.io": "^4.7.4",
+        "source-map-support": "^0.5.21",
+        "uuid": "^9.0.1",
         "winston": "^3.11.0"
     },
     "scripts": {
