--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "node": "^18 || ^20 || ^21"
     },
     "dependencies": {
-        "@rfxcom2mqtt/frontend": "0.1.7-11",
+        "@rfxcom2mqtt/frontend": "0.2.0",
         "@types/express": "^4.17.21",
         "connect-gzip-static": "^3.0.1",
         "cookie-parser": "^1.4.5",
@@ -37,7 +37,7 @@
         "build": "npx tsc && node index.js writehash",
         "build-start": "node index.js --env-file=.env.dev",
         "start": "ts-node ./src/index.ts",
-        "dev": "ts-node ./src/index.ts --env-file=.env.dev",
+        "dev": "npx cross-env NODE_OPTIONS='--no-warnings' ts-node ./src/index.ts --env-file=.env.dev",
         "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
         "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
         "pretty:check": "prettier --check \"./**/*.{js,jsx,ts,tsx}\""
