--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
         "socket.io": "^4.7.4",
         "source-map-support": "^0.5.21",
         "uuid": "^9.0.1",
-        "winston": "^3.11.0"
+        "winston": "^3.11.0",
+        "shelljs": ">=0.8.5",
+        "yargs-parser": ">=5.0.1",
+        "nth-check": ">=2.0.1"
     },
     "scripts": {
         "build": "npx tsc && node index.js writehash",
