--- a/package.json
+++ b/package.json
@@ -12,29 +12,25 @@
     "dependencies": {
         "@rfxcom2mqtt/frontend": "0.2.1",
         "@types/express": "^4.17.21",
-        "connect-gzip-static": "^3.0.1",
         "cookie-parser": "^1.4.5",
-        "dotenv": "^8.2.0",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-static-gzip": "^2.1.7",
-        "express-ws": "^5.0.2",
-        "finalhandler": "^1.2.0",
         "git-last-commit": "^1.0.1",
         "http-status-codes": "^2.3.0",
-        "mqtt": "^4.3.7",
+        "js-yaml": "^4.1.0",
+        "mqtt": "^5.5.2",
         "node-config-yaml": "^0.1.4",
         "node-cron": "^3.0.2",
         "object-assign-deep": "^0.4.0",
         "rfxcom": "^2.6.0",
         "rimraf": "^5.0.5",
         "semver": "^7.5.4",
-        "socket.io": "^4.7.4",
+        "socket.io": "^4.7.5",
         "source-map-support": "^0.5.21",
         "uuid": "^9.0.1",
-        "winston": "^3.11.0",
-        "shelljs": ">=0.8.5",
-        "yargs-parser": ">=5.0.1",
-        "nth-check": ">=2.0.1"
+        "winston": "^3.13.0",
+        "winston-transport": "^4.7.0"
     },
     "scripts": {
         "build": "npx tsc && node index.js writehash",
@@ -46,21 +42,20 @@
         "pretty:check": "prettier --check \"./**/*.{js,jsx,ts,tsx}\""
     },
     "devDependencies": {
-        "@tsconfig/node18": "^18.2.2",
-        "@types/node": "^20.11.6",
+        "@tsconfig/node18": "^18.2.4",
+        "@types/node": "^20.12.7",
         "@types/node-cron": "^3.0.11",
         "@types/object-assign-deep": "^0.4.3",
-        "@typescript-eslint/eslint-plugin": "~6.7.4",
-        "@typescript-eslint/parser": "~6.7.4",
-        "eslint": "~8.50.0",
-        "eslint-config-prettier": "~9.0.0",
-        "eslint-plugin-prettier": "~5.0.0",
-        "prettier": "~3.0.3",
+        "@typescript-eslint/eslint-plugin": ">=1.8.0",
+        "@typescript-eslint/parser": ">=1.8.0",
+        "eslint": ">=6.0.0",
+        "eslint-config-typescript": "^3.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^17.2.1",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-promise": "^6.0.0",
+        "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3",
-        "postcss": ">=8.4.31",
-        "shelljs": ">=0.8.5",
-        "yargs-parser": ">=5.0.1",
-        "nth-check": ">=2.0.1"
+        "typescript": "*"
     }
 }
