--- a/package.json
+++ b/package.json
@@ -38,24 +38,22 @@
         "start": "ts-node ./src/index.ts",
         "dev": "ts-node ./src/index.ts --env-file=.env.dev",
         "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
-        "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
+        "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\" --ignore-pattern 'dist/*' --ignore-pattern 'index.js'",
         "pretty:check": "prettier --check \"./**/*.{js,jsx,ts,tsx}\""
     },
     "devDependencies": {
-        "@tsconfig/node18": "^18.2.4",
         "@types/node": "^20.12.7",
         "@types/node-cron": "^3.0.11",
         "@types/object-assign-deep": "^0.4.3",
         "@typescript-eslint/eslint-plugin": ">=1.8.0",
         "@typescript-eslint/parser": ">=1.8.0",
-        "eslint": ">=6.0.0",
+        "eslint": "^9.0.0",
         "eslint-config-typescript": "^3.0.0",
-        "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-n": "^17.2.1",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.0.0",
         "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "*"
+        "typescript": "^5.4.5"
     }
 }
