--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
         "rfxcom": "^2.6.0",
         "rimraf": "^5.0.5",
         "semver": "^7.5.4",
+        "shelljs": "^0.8.5",
         "socket.io": "^4.7.5",
         "source-map-support": "^0.5.21",
         "uuid": "^9.0.1",
         "winston": "^3.13.0",
-        "winston-transport": "^4.7.0"
+        "winston-transport": "^4.7.0",
+        "y18n": "^4.0.1"
     },
     "scripts": {
         "build": "npx tsc && node index.js writehash",
@@ -48,6 +50,7 @@
         "eslint": "^9.0.0",
         "eslint-plugin-n": "^17.2.1",
         "eslint-plugin-prettier": "^5.1.3",
+        "nth-check": "^2.1.1",
         "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
