Support des capteurs températures, humidité, ... (#19)
* Create docker-publish.yml

* Create docker-publish.yml

* Delete .github/docker-publish.yml

* Temperature and humidity sensors support

* Update docker-publish.yml

* Update docker-publish.yml

* Update main.yml

* Update main.yml

* Update main.yml (supported platforms)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: rfxcom2mqtt/rfxcom2mqtt
+          images: laurentlemercier/rfxcom2mqtt
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=raw,value=dev,event=develop
@@ -37,7 +37,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64, linux/arm64/v8, linux/arm/v7
+          platforms: linux/amd64, linux/i386, linux/armhf, linux/arm/v7,linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
